최신 버전으로 맞춤.(이전 수정사항)